# wsi-dicom

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/: CHANGELOG.md  CONTRIBUTING.md  REMEDIATION_PLAN.md  SECURITY.md  semver-0.2-to-0.7-allowed-breaks.txt  typos.toml
.github/workflows/: ci.yml  publish.yml  secret-scan.yml
apps/wsi-dicom-gui/: Cargo.toml
apps/wsi-dicom-gui/src/: main.rs  theme.rs
bench/: README.md  fidelity.py  gdc_benchmark.py  manifest.py  requirements.txt  run_bench.py
bench/adapters/: common.py  highdicom_adapter.py  wsi_dicom.py  wsidicomizer_adapter.py
benches/: internal_helpers.rs
docs/: apple-silicon-routing-audit.md  architecture.md
docs/superpowers/plans/: 2026-05-07-htj2k-simd-tier1-prototype.md  2026-05-07-jpeg-private-metal-htj2k-path.md
docs/superpowers/results/: 2026-05-07-metal-htj2k-benchmark-results.md  2026-05-07-metal-htj2k-parallelism-investigation.md
examples/: basic_export.rs  profile_coverage.rs
fuzz/: Cargo.toml
fuzz/corpus/dicom_validation_fragment/: markers
fuzz/corpus/fhir_bundle/: linked.json
fuzz/corpus/htj2k_decoder_template/: placeholders
fuzz/corpus/metadata_json/: nested.json  valid.json
fuzz/corpus/tile_preparation/: rgb-ish
fuzz/fuzz_targets/: dicom_validation_fragment.rs  fhir_bundle.rs  htj2k_decoder_template.rs  metadata_json.rs  tile_preparation.rs
scripts/: benchmark_wsidicomizer.py  check-semver.sh  publish-crate.sh
src/: api.rs  bench_support.rs  cli_report.rs  coordinate.rs  defaults.rs  diagnostics.rs  encode.rs  error.rs  export.rs  gpu.rs  instance_context.rs  lib.rs  main.rs  metadata.rs  metal_interop.rs  options.rs  passthrough.rs  profile.rs  report.rs  request.rs  routing.rs  synthetic_source.rs  test_support.rs  tile.rs  time.rs  uid.rs  validation.rs  writer.rs
src/encode/: metal.rs
src/encode/metal/: tests.rs
src/export/: frame_region.rs  hybrid_lane.rs  icc_profile.rs  j2k_direct_htj2k.rs  j2k_policy.rs  jobs.rs  jpeg_baseline.rs  jpeg_baseline_instance.rs  jpeg_direct_htj2k.rs  jpeg_passthrough.rs  jpeg_retile.rs  lossless_j2k_cpu.rs  lossless_j2k_instance.rs  lossless_j2k_plan.rs  metal_compose.rs  metal_input.rs  metal_route.rs  metal_row_batch.rs  profiling.rs  route_cache.rs  tile_grid.rs  transaction.rs
src/export/jpeg_baseline/: metal.rs
src/export/metal_compose/: address_perf.metal  address_probe.metal  addressing.rs  compose.metal  compose.rs  pack.rs  tests.rs  types.rs
src/export/metal_row_batch/: aligned.rs  whole_level.rs
src/export/tests/: auto_route_tests.rs  export_integration_tests.rs  external_htj2k_tests.rs  fixture_tests.rs  icc_profile_tests.rs  j2k_encode_tests.rs  jpeg_baseline_route_tests.rs  options_builder_tests.rs  route_profile_tests.rs  support.rs  unit_tests.rs
src/validation/: process.rs
src/writer/: persistence.rs
supply-chain/: config.toml
tests/: cli_e2e.rs  repo_integrity.rs  test_benchmark_adapters.py  test_benchmark_wsidicomizer.py  test_dependency_topology.py  test_gdc_benchmark.py  test_publish_workflow.py  unsafe_policy.rs
xtask/src/: main.rs
