[package]
name = "wsi-dicom"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
description = "Convert whole-slide imaging files to DICOM VL Whole Slide Microscopy"
rust-version = "1.96"
readme = "README.md"
repository = "https://github.com/frames-sg/wsi-dicom"
homepage = "https://github.com/frames-sg/wsi-dicom"
documentation = "https://docs.rs/wsi-dicom"
keywords = ["dicom", "whole-slide", "microscopy", "pathology", "wsi"]
categories = ["multimedia::images", "science"]
exclude = [
    "bench/**",
    "apps/wsi-dicom-gui/**",
    ".github/**",
    ".cargo/**",
    "fuzz/**",
    "supply-chain/**",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
dicom-core = "0.9"
dicom-dictionary-std = "0.9"
dicom-object = "0.9"
moxcms = "0.8.1"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
shlex = "2"
j2k-core = { package = "signinum-core", version = "0.4.4" }
j2k = { package = "signinum-j2k", version = "0.4.4" }
j2k-cuda = { package = "signinum-j2k-cuda", version = "0.4.4", optional = true, default-features = false, features = ["cuda-runtime"] }
j2k-metal = { package = "signinum-j2k-metal", version = "0.4.4", optional = true }
j2k-jpeg = { package = "signinum-jpeg", version = "0.4.4" }
j2k-jpeg-metal = { package = "signinum-jpeg-metal", version = "0.4.4", optional = true }
j2k-transcode = { package = "signinum-transcode", version = "0.4.4" }
j2k-transcode-metal = { package = "signinum-transcode-metal", version = "0.4.4", optional = true }
wsi-rs = { package = "statumen", version = "0.3.1" }
tempfile = "3"
thiserror = "2"

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "=0.33.0", optional = true }
objc = { version = "0.2", optional = true }

[features]
default = []
bench-internals = []
cuda = ["dep:j2k-cuda"]
metal = [
    "dep:metal",
    "dep:objc",
    "dep:j2k-metal",
    "dep:j2k-jpeg-metal",
    "dep:j2k-transcode-metal",
    "wsi-rs/metal",
]

[patch.crates-io]
# Local compatibility patches only change upstream Metal dependencies from 0.31 to =0.33.0.
statumen = { path = "vendor/metal-0.33-patches/statumen-0.3.1" }
signinum-j2k-metal = { path = "vendor/metal-0.33-patches/signinum-j2k-metal-0.4.4" }
signinum-jpeg-metal = { path = "vendor/metal-0.33-patches/signinum-jpeg-metal-0.4.4" }
signinum-transcode-metal = { path = "vendor/metal-0.33-patches/signinum-transcode-metal-0.4.4" }

[dev-dependencies]
criterion = { version = "0.8.2", default-features = false, features = ["cargo_bench_support"] }

[package.metadata.docs.rs]
no-default-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "internal_helpers"
harness = false
required-features = ["bench-internals"]

[workspace]
members = [".", "xtask", "apps/wsi-dicom-gui"]
resolver = "2"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.bench]
lto = "fat"
codegen-units = 1
