[package]
name = "wsi-dicom"
version = "0.7.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Convert whole-slide imaging files to DICOM VL Whole Slide Microscopy"
rust-version = "1.96"
readme = "README.md"
repository = "https://github.com/frames-sg/wsi-dicom"
homepage = "https://github.com/frames-sg/wsi-dicom"
documentation = "https://docs.rs/wsi-dicom"
keywords = ["dicom", "whole-slide", "microscopy", "pathology", "wsi"]
categories = ["multimedia::images", "science"]
exclude = [
    "bench/**",
    "apps/wsi-dicom-gui/**",
    ".github/**",
    ".cargo/**",
    "fuzz/**",
    "supply-chain/**",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
dicom-core = "0.9"
dicom-dictionary-std = "0.9"
dicom-object = "0.9"
getrandom = "0.4"
moxcms = "0.8.1"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
shlex = "2"
j2k-core = "=0.7.2"
j2k = "=0.7.2"
j2k-cuda = { version = "=0.7.2", optional = true, default-features = false, features = ["cuda-runtime"] }
j2k-metal = { version = "=0.7.2", optional = true }
j2k-metal-support = { version = "=0.7.2", optional = true }
j2k-jpeg = "=0.7.2"
j2k-jpeg-metal = { version = "=0.7.2", optional = true }
j2k-transcode = "=0.7.2"
j2k-transcode-metal = { version = "=0.7.2", optional = true }
wsi-rs = { path = "../wsi-rs", version = "=0.5.0" }
tempfile = "3"
thiserror = "2"

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "=0.33.0", optional = true }
objc = { version = "0.2", optional = true }

[features]
default = []
bench-internals = []
cuda = ["dep:j2k-cuda"]
metal = [
    "dep:metal",
    "dep:objc",
    "dep:j2k-metal",
    "dep:j2k-metal-support",
    "dep:j2k-jpeg-metal",
    "dep:j2k-transcode-metal",
    "wsi-rs/metal",
]

[dev-dependencies]
criterion = { version = "0.8.2", default-features = false, features = ["cargo_bench_support"] }
syn = { version = "2", features = ["full", "visit"] }

[package.metadata.docs.rs]
no-default-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "internal_helpers"
harness = false
required-features = ["bench-internals"]

[workspace]
members = [".", "xtask", "apps/wsi-dicom-gui"]
resolver = "2"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.bench]
lto = "fat"
codegen-units = 1
