[package]
name = "wsi-dicom-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
wsi-rs = { path = "../../wsi-rs", version = "=0.5.0" }
wsi-dicom = { path = "..", features = ["bench-internals"] }

[patch.crates-io]
j2k = { path = "../../j2k/crates/j2k" }
j2k-core = { path = "../../j2k/crates/j2k-core" }
j2k-jpeg = { path = "../../j2k/crates/j2k-jpeg" }
j2k-native = { path = "../../j2k/crates/j2k-native" }
j2k-profile = { path = "../../j2k/crates/j2k-profile" }
j2k-tilecodec = { path = "../../j2k/crates/j2k-tilecodec" }
j2k-transcode = { path = "../../j2k/crates/j2k-transcode" }
j2k-types = { path = "../../j2k/crates/j2k-types" }

[workspace]

[[bin]]
name = "metadata_json"
path = "fuzz_targets/metadata_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fhir_bundle"
path = "fuzz_targets/fhir_bundle.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tile_preparation"
path = "fuzz_targets/tile_preparation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dicom_validation_fragment"
path = "fuzz_targets/dicom_validation_fragment.rs"
test = false
doc = false
bench = false

[[bin]]
name = "htj2k_decoder_template"
path = "fuzz_targets/htj2k_decoder_template.rs"
test = false
doc = false
bench = false
