[package]
name = "wsi-dicom-gui"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false
rust-version = "1.96"

[dependencies]
eframe = { version = "0.34.2", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "wayland",
    "web_screen_reader",
    "x11",
] }
rfd = "0.17.2"
serde_json = "1"
wsi-dicom = { path = "../.." }
